<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/activity_main_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_link"
        android:onClick="actionClick"/>

    <Button
        android:id="@+id/activity_main_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_links"
        android:onClick="actionClick"/>

    <Button
        android:id="@+id/activity_main_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_link"
        android:onClick="actionClick"/>

</LinearLayout>
