<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_search_link"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/text_label"
        android:text="@string/create_link_title"/>

    <EditText
        android:id="@+id/activity_search_link_title"
        style="@style/edit_field"/>

    <TextView
        style="@style/text_label"
        android:text="@string/create_link_category"/>

    <EditText
        android:id="@+id/activity_search_link_category"
        style="@style/edit_field"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="searchLink"/>

    <ListView
        android:id="@+id/activity_list_link_lv_listLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#888888"
        android:dividerHeight="1dp">
    </ListView>

</LinearLayout>
